bug fix resort state wrap with arrow function

--- a/client/src/pages/gigs/Gigs.scss
+++ b/client/src/pages/gigs/Gigs.scss
@@ -101,7 +101,7 @@
                     flex-direction: column;
                     row-gap: 0.4rem;
                     border-radius: 5px;
-                    z-index: 2;
+                    z-index: 1;
                     border : 1px solid gray;
                     
                     span {
